+ support for lightbox for images ending -resized.(jpg|jpeg|png)

--- a/layouts/base.html
+++ b/layouts/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/media/css/blueprint/print.css" type="text/css" media="print">
     <!--[if lt IE 8]><link rel="stylesheet" href="/media/css/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
     <link rel="stylesheet" href="/media/css/blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="/media/js/jquery-lightbox-0.5/css/jquery.lightbox-0.5.css" type="text/css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/media/css/main.css" type="text/css" media="screen, projection">
   </head>
   <body>
@@ -15,4 +16,7 @@
       <%= yield %>
     </div>
   </body>
+  <script type="text/javascript" src="/media/js/jquery-1.7.min.js"></script>
+  <script type="text/javascript" src="/media/js/jquery-lightbox-0.5/js/jquery.lightbox-0.5.pack.js"></script>
+  <script type="text/javascript" src="/media/js/zdravoartdeco.js"></script>
 </html>
